# adaptagrams

./: README.md
.github/workflows/: ci.yml
cola/: .gitignore  CMakeLists.txt
cola/cmake/: Testing.cmake
cola/libavoid/: CMakeLists.txt  Makefile.am  connectionpin.cpp  connectionpin.h  connend.cpp  connend.h  graph.cpp  graph.h  junction.cpp  makepath.cpp  obstacle.cpp  obstacle.h  orthogonal.cpp  router.h  scanline.cpp  scanline.h  shape.cpp  uniqueid.cpp  uniqueid.h  vertices.cpp  vertices.h
cola/libavoid/tests/new/: mixedConnTypes.cpp  moveShapeConnectionPins.cpp
cola/libavoid/tests/new/orthogonal/: hierarchical.cpp
cola/libdialect/tests/: Makefile.am  treeboxes01.cpp
cola/libtopology/: topology_graph.h
